Updated nuspec description

--- a/package.nuspec
+++ b/package.nuspec
@@ -9,9 +9,9 @@
     <licenseUrl>https://github.com/mhusseini/Xamarin.Bindings.Android.AwesomeImagePicker/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/mhusseini/Xamarin.Bindings.Android.AwesomeImagePicker</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Xamarin bindings library for the Android PhotoView library</description>
+    <description>Xamarin bindings library for the Android AwesomeImagePicker library</description>
     <copyright>Copyright 2017</copyright>
-    <tags>Xamarin PhotoView Android Binding</tags>
+    <tags>Xamarin AwesomeImagePicker Android Binding</tags>
   </metadata>
   <files>
     <file src="bin\Release\Xamarin.Bindings.Android.AwesomeImagePicker.dll" target="lib\MonoAndroid10" />
